--- a/examples/mobstyle.css
+++ b/examples/mobstyle.css
@@ -273,6 +273,25 @@
         flex-direction: column;
     }
 
+
+    .sec4-leftimg{
+    position: absolute;
+    height: 55%;
+    top: 0%;
+    left:45vw;
+     filter: drop-shadow(4px 4px 40px rgba(0, 0, 0, 0.3));
+     
+    }
+    .sec4-rightimg{
+        position: absolute;
+        height: 55%;
+        top: 40%;
+        right:35vw;
+        z-index: 2;
+        filter: drop-shadow(4px 4px 40px rgba(0, 0, 0, 0.3));
+
+}
+
     .slide-headers {
         font-family: Montserrat;
         font-style: normal;
@@ -333,7 +352,7 @@
     .sec4-head {
         position: absolute;
 
-        left: 10vw;
+        left: 30vw;
         top: 7vh;
 
         /* background-color: blueviolet; */
@@ -401,11 +420,11 @@
     .sec4-p {
         width: 90%;
         height: 90%;
-        padding-top: 20%;
+        padding-top: 0%;
         font-family: Montserrat;
         font-style: normal;
         font-weight: bold;
-        font-size: 2.8vw;
+        font-size: 2.7vw;
         line-height: 115.7%;
         /* or 25px */
 
