--- a/examples/style.css
+++ b/examples/style.css
@@ -505,7 +505,7 @@ canvas {
     position: absolute;
     width: 25vw;
     height: 80vh;
-    left: 10vw;
+    left: 5vw;
     top: 15vh;
 
     background: #000000;
@@ -514,12 +514,30 @@ canvas {
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+    z-index: 7;
+}
+.sec4-leftimg{
+    position: absolute;
+    height: 55%;
+    top: 40%;
+    left:21vw;
+     filter: drop-shadow(4px 4px 40px rgba(0, 0, 0, 0.3));
+     
+    }
+    .sec4-rightimg{
+        position: absolute;
+        height: 55%;
+        top: 40%;
+        right:14vw;
+        z-index: 2;
+        filter: drop-shadow(4px 4px 40px rgba(0, 0, 0, 0.3));
+
 }
 .sec4-right {
     position: absolute;
     width: 25vw;
     height: 80vh;
-    left: 71vw;
+    left: 70vw;
     top: 15vh;
 
     background: #000000;
@@ -528,6 +546,7 @@ canvas {
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+   z-index: 6;
 }
 .testmob {
     font-size: 10vw;
@@ -539,7 +558,7 @@ canvas {
 .sec4-p {
     width: 90%;
     height: 90%;
-
+    z-index: 9;
     font-family: Montserrat;
     font-style: normal;
     font-weight: bold;
@@ -859,6 +878,7 @@ canvas {
     background-size: cover; /* Resize the background image to cover the entire container */
     background-color: #000;
     position: relative;
+    overflow: hidden;
 }
 .sec6-head {
     position: absolute;
@@ -924,7 +944,7 @@ canvas {
 }
 
 .imprintdiv {
-    /* background-color: black; */
+    background-color:  #17336d;
     width: 100%;
     height: 30%;
     font-size: 1.5vw;
@@ -935,6 +955,7 @@ canvas {
     justify-content: center;
     align-items: center;
     z-index: 100;
+    color: #daddee;
 }
 .imprintdiv div {
     width: 100%;
@@ -942,6 +963,7 @@ canvas {
 }
 .imprintdiv div h2 {
     margin: 15px;
+     color: #daddee;
 }
 .footermob {
     visibility: hidden;
@@ -956,17 +978,22 @@ canvas {
     align-items: center;
     flex-direction: column;
 }
-#footerdescdiv1 {
+.footerdescdiv1 {
     height: 20px;
 }
-#footerdescdiv1 h2 {
-    margin: 0;
+.footerdescdiv1 h2 {
+    margin-top: 20px;
+    margin-right: 10px;
     height: 20px;
+     color: #daddee;
 }
 
 .imprintdiv div {
     width: 100%;
     height: 100%;
+}
+.sociall{
+    margin: 5px;
 }
 .footerdescdiv2 img {
     height: 30px;
@@ -1163,7 +1190,7 @@ canvas {
     /* transform: scale(1); */
 }
 .zoomdiv {
-    top: 0;
+    top: -20%;
     left: 0;
     position: absolute;
     width: 100%;
@@ -1245,7 +1272,7 @@ canvas {
     /* border: crimson 5px solid; */
 }
 .ss-text {
-    position: absolute;
+    /* position: absolute; */
     /* transform: translate(-50%, -50%); */
     left: 0;
     /* transform: translate(-50% -50%); */
